<resources>
    <string name="app_name">LotoAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="english_chichewa_text">English - Chichewa</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="viewpager_content_description">Description for ViewPager</string>
    <string name="tablayout_content_description">Description for TabLayout</string>
    <string name="game_over">Game Over!</string>
    <string name="no_word_pairs_message">No word pairs to display.</string>
    <string name="tab_layout_content_description">Description for TabLayout</string>
    <string name="view_pager_content_description">Description for ViewPager</string>
    <string name="category_spinner_content_description">Category Spinner Description</string>
    <string name="category_image_content_description">Description for category image</string>
    <string name="animals_image_content_description">Animals Image</string>
    <string name="common_phrases_image_content_description">Common Phrases Image</string>
    <string name="common_words_image_content_description">Common Words Image</string>
    <string name="forehead_message">Place the phone on your forehead</string>
    <string name="timer_default_text">00:00</string>
    <string name="splash_image_description">Splash Screen Background</string>
    <string name="correct_message">EYA!</string>
    <string name="skip_message">INA!</string>


</resources>